@@ -76,6 +76,7 @@ S3method(makeRLearner,classif.naiveBayes)
 S3method(makeRLearner,classif.nnet)
 S3method(makeRLearner,classif.plr)
 S3method(makeRLearner,classif.plsDA)
+S3method(makeRLearner,classif.plsda_caret)
 S3method(makeRLearner,classif.qda)
 S3method(makeRLearner,classif.quaDA)
 S3method(makeRLearner,classif.randomForest)
@@ -164,6 +165,7 @@ S3method(predictLearner,classif.naiveBayes)
 S3method(predictLearner,classif.nnet)
 S3method(predictLearner,classif.plr)
 S3method(predictLearner,classif.plsDA)
+S3method(predictLearner,classif.plsda_caret)
 S3method(predictLearner,classif.qda)
 S3method(predictLearner,classif.quaDA)
 S3method(predictLearner,classif.randomForest)
@@ -277,6 +279,7 @@ S3method(trainLearner,classif.naiveBayes)
 S3method(trainLearner,classif.nnet)
 S3method(trainLearner,classif.plr)
 S3method(trainLearner,classif.plsDA)
+S3method(trainLearner,classif.plsda_caret)
 S3method(trainLearner,classif.qda)
 S3method(trainLearner,classif.quaDA)
 S3method(trainLearner,classif.randomForest)
