@@ -7,6 +7,7 @@ mlr_2.1:
 
 - new learners:
 -- regr.cforest
+-- classif.plsda_caret
 
 - new measures
 -- bac
